# application/src/main/resources/openapi/orm-comparison.yml
@@ -10,7 +10,7 @@ info:
 
 tags:
   - name: items
-    description: Items in store
+    description: Items in the store
   - name: orders
     description: Orders form with items by users
   - name: users
@@ -40,7 +40,85 @@ paths:
         500:
           $ref: '#/components/responses/Error'
 
+    put:
+      tags:
+        - items
+      summary: putItem
+      description: Save or update existing item
+      operationId: putItem
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PutItemRequest'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PutItemResponse'
+        400:
+          $ref: '#/components/responses/Error'
+        401:
+          $ref: '#/components/responses/Error'
+        500:
+          $ref: '#/components/responses/Error'
+
+  /items/{itemId}:
+
+    parameters:
+      - $ref: '#/components/parameters/ItemId'
+
+    get:
+      tags:
+        - items
+      summary: getItemById
+      description: Get item by id
+      operationId: getItemById
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetItemResponse'
+        400:
+          $ref: '#/components/responses/Error'
+        401:
+          $ref: '#/components/responses/Error'
+        500:
+          $ref: '#/components/responses/Error'
+
   /orders:
+
+    put:
+      tags:
+        - orders
+      summary: putOrder
+      description: Save or update existing order
+      operationId: putOrder
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PutOrderRequest'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PutOrderResponse'
+        400:
+          $ref: '#/components/responses/Error'
+        401:
+          $ref: '#/components/responses/Error'
+        500:
+          $ref: '#/components/responses/Error'
+
 
     get:
       tags:
@@ -62,7 +140,58 @@ paths:
         500:
           $ref: '#/components/responses/Error'
 
+  /orders/{orderId}:
+
+    parameters:
+      - $ref: '#/components/parameters/OrderId'
+
+    get:
+      tags:
+        - orders
+      summary: getOrderById
+      description: Get order by id
+      operationId: getOrderById
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetOrderResponse'
+        400:
+          $ref: '#/components/responses/Error'
+        401:
+          $ref: '#/components/responses/Error'
+        500:
+          $ref: '#/components/responses/Error'
+
   /users:
+
+    put:
+      tags:
+        - users
+      summary: putUser
+      description: Save or update existing user
+      operationId: putUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PutUserRequest'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PutUserResponse'
+        400:
+          $ref: '#/components/responses/Error'
+        401:
+          $ref: '#/components/responses/Error'
+        500:
+          $ref: '#/components/responses/Error'
 
     get:
       tags:
@@ -84,8 +213,63 @@ paths:
         500:
           $ref: '#/components/responses/Error'
 
+  /users/{userId}:
+
+    parameters:
+      - $ref: '#/components/parameters/UserId'
+
+    get:
+      tags:
+        - users
+      summary: getUserById
+      description: Get user by id
+      operationId: getUserById
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetUserResponse'
+        400:
+          $ref: '#/components/responses/Error'
+        401:
+          $ref: '#/components/responses/Error'
+        500:
+          $ref: '#/components/responses/Error'
 
 components:
+
+  parameters:
+    ItemId:
+      description: Item id (generates by frontend to avoid dublications)
+      name: itemId
+      in: path
+      required: true
+      schema:
+        type: string
+        format: uuid
+      example: 127aee00-fa63-4eff-a7a6-a4bc21118776
+
+    OrderId:
+      description: Order id (generates by frontend to avoid dublications)
+      name: orderId
+      in: path
+      required: true
+      schema:
+        type: string
+        format: uuid
+      example: 127aee00-fa63-4eff-a7a6-a4bc21118776
+
+    UserId:
+      description: User id (generates by frontend to avoid dublications)
+      name: userId
+      in: path
+      required: true
+      schema:
+        type: string
+        format: uuid
+      example: 127aee00-fa63-4eff-a7a6-a4bc21118776
 
   responses:
 
@@ -109,6 +293,30 @@ components:
           items:
             $ref: '#/components/schemas/Item'
 
+    GetItemResponse:
+      type: object
+      required:
+        - payload
+      properties:
+        payload:
+          $ref: '#/components/schemas/Item'
+
+    PutItemRequest:
+      type: object
+      required:
+        - payload
+      properties:
+        payload:
+          $ref: '#/components/schemas/Item'
+
+    PutItemResponse:
+      type: object
+      required:
+        - payload
+      properties:
+        payload:
+          $ref: '#/components/schemas/Item'
+
     GetOrdersResponse:
       type: object
       required:
@@ -120,6 +328,31 @@ components:
           items:
             $ref: '#/components/schemas/Order'
 
+    GetOrderResponse:
+      type: object
+      required:
+        - payload
+      properties:
+        payload:
+          $ref: '#/components/schemas/Order'
+
+
+    PutOrderRequest:
+      type: object
+      required:
+        - payload
+      properties:
+        payload:
+          $ref: '#/components/schemas/Order'
+
+    PutOrderResponse:
+      type: object
+      required:
+        - payload
+      properties:
+        payload:
+          $ref: '#/components/schemas/Order'
+
     GetUsersResponse:
       type: object
       required:
@@ -130,6 +363,31 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/User'
+
+    GetUserResponse:
+      type: object
+      required:
+        - payload
+      properties:
+        payload:
+          $ref: '#/components/schemas/User'
+
+    PutUserRequest:
+      type: object
+      required:
+        - payload
+      properties:
+        payload:
+          $ref: '#/components/schemas/User'
+
+    PutUserResponse:
+      type: object
+      required:
+        - payload
+      properties:
+        payload:
+          $ref: '#/components/schemas/User'
+
 
     Item:
       description: Item in the store
@@ -157,7 +415,7 @@ components:
           example: Example desecription
         price:
           description: Item's price
-          type: double
+          type: big-decimal
 
     Order:
       description: Order in the store
